disable tie button

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
               y
             </div>
           </div>
-          <div
-            onclick="if(finishFlag==0) sortList(0);"
-            class="sorter-option option-tie"
-          >
-            it’s a tie!
-          </div>
+          <!-- <div -->
+          <!--   onclick="if(finishFlag==0) sortList(0);" -->
+          <!--   class="sorter-option option-tie" -->
+          <!-- > -->
+          <!--   it’s a tie! -->
+          <!-- </div> -->
         </div>
       </div>
     </main>
