use optimized image size, add show more button & logic

--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
     <section class="page-result">
       <div class="container">
         <div id="battleResult"></div>
+        <a
+          id="showMore"
+          onclick="toggleResult()"
+          style="display: none; cursor: pointer"
+          >Show More</a
+        >
         <br />
         <a
           id="tweet-button"
