--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
 
     <footer class="page-footer">
       <p style="text-align: center">
-        made with ♡ by <a href="https://twitter.com/bucinakko">@bucinakko</a>
+        made with ♡ by <a href="https://x.com/celdaris">@celdaris</a>
         <br />
         <span style="font-size: 0.7em">
           fork of
-          <a href="https://loonaverse.com/bias-sorter">
+          <a href="https://github.com/idaluisonyeo/bias-sorter">
             loonaverse.com/bias-sorter
           </a>
         </span>
