add try song sorter button

--- a/index.html
+++ b/index.html
@@ -90,11 +90,19 @@
         <br />
         <a
           id="tweet-button"
-          class="twitter-share-button"
+          class="result-btn result-btn-primary"
           style="display: none"
           href=""
         >
           Share to X
+        </a>
+        <a
+          id="sssongs-button"
+          class="result-btn"
+          style="display: none"
+          href="https://sssorter.pages.dev/songs"
+        >
+          Try Song Sorter!
         </a>
       </div>
     </section>
