implement cute K-pop redesign with vite build system
- add pastel gradient backgrounds and photocard-style member selection
- implement CSS custom properties for color theming and member-specific colors
- add glass morphism footer stickers with floating design
- include responsive typography with Google Fonts (Nunito, Quicksand, Inter, Poppins)
- add heart-based progress indicators and "Gravity" terminology
- implement CSS fallbacks with @supports for color-mix() and backdrop-filter
- add Vite + Autoprefixer build pipeline for browser compatibility
- update build script to handle both main app and song sorter sub-app

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&family=Quicksand:wght@400;600&family=Inter:wght@400;500&family=Poppins:wght@500;600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/assets/sorter.css" />
@@ -47,7 +47,7 @@
     <main class="page-sorter" id="page-sorter">
       <div class="container">
         <h2 id="battleNumber" class="sorter-header">
-          <strong>battle #1</strong> 0% sorted
+          <strong>Gravity #1</strong><br>♡♡♡♡♡ 0% sorted
         </h2>
 
         <div class="sorter-game">
@@ -108,16 +108,12 @@
     </section>
 
     <footer class="page-footer">
-      <p style="text-align: center">
-        made with ♡ by <a href="https://x.com/celdaris">@celdaris</a>
-        <br />
-        <span style="font-size: 0.7em">
-          fork of
-          <a href="https://github.com/idaluisonyeo/bias-sorter">
-            loonaverse.com/bias-sorter
-          </a>
-        </span>
-      </p>
+      <a href="https://x.com/celdaris" class="footer-sticker author-link">
+        made with ♡ by @celdaris
+      </a>
+      <a href="https://github.com/idaluisonyeo/bias-sorter" class="footer-sticker github-link">
+        fork of loonaverse.com/<br>bias-sorter
+      </a>
     </footer>
 
     <script type="text/javascript">
