--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Preconnect for faster image loading -->
+    <link rel="preconnect" href="https://imagedelivery.net" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&family=Quicksand:wght@400;600&family=Inter:wght@400;500&family=Poppins:wght@500;600&display=swap"
       rel="stylesheet"
@@ -121,6 +123,7 @@
        * Initialize
        **/
       initList();
+      preloadInitialImages();
       showFinal();
     </script>
   </body>
