--- a/index.html
+++ b/index.html
@@ -4,6 +4,69 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Primary Meta Tags -->
+    <title>
+      tripleS Bias Sorter - Find Your Ultimate tripleS Member Ranking | K-pop
+      Bias Ranking Game
+    </title>
+    <meta
+      name="title"
+      content="tripleS Bias Sorter - Find Your Ultimate tripleS Member Ranking | K-pop Bias Ranking Game"
+    />
+    <meta
+      name="description"
+      content="Discover your ultimate tripleS bias ranking! Compare and rank all 24 tripleS members using our interactive bias ranking system."
+    />
+    <meta
+      name="keywords"
+      content="tripleS, bias sorter, K-pop bias, member ranking, bias quiz, Gravity, ASSEMBLE, tripleS members, K-pop ranking game"
+    />
+    <meta name="author" content="@celdaris" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://sssorter.pages.dev/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sssorter.pages.dev/" />
+    <meta
+      property="og:title"
+      content="tripleS Bias Sorter - Find Your Ultimate tripleS Member Ranking"
+    />
+    <meta
+      property="og:description"
+      content="Discover your ultimate tripleS bias ranking! Compare and rank all 24 tripleS members using our interactive bias ranking system."
+    />
+    <meta
+      property="og:image"
+      content="https://sssorter.pages.dev/public/main-og-image.jpg"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="tripleS Bias Sorter" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://sssorter.pages.dev/" />
+    <meta
+      property="twitter:title"
+      content="tripleS Bias Sorter - Find Your Ultimate tripleS Member Ranking"
+    />
+    <meta
+      property="twitter:description"
+      content="Discover your ultimate tripleS bias ranking! Compare and rank all 24 tripleS members using our interactive bias ranking system."
+    />
+    <meta
+      property="twitter:image"
+      content="https://sssorter.pages.dev/public/main-og-image.jpg"
+    />
+    <meta property="twitter:creator" content="@celdaris" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#ff6b9d" />
+    <meta name="msapplication-TileColor" content="#ff6b9d" />
+
     <!-- Preconnect for faster image loading -->
     <link rel="preconnect" href="https://imagedelivery.net" crossorigin />
     <link
@@ -11,8 +74,41 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/assets/sorter.css" />
-    <title>tripleS bias sorter | sssorter.pages.dev</title>
     <link rel="icon" type="image/png" href="/assets/cube.png" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "tripleS Bias Sorter",
+        "url": "https://sssorter.pages.dev/",
+        "description": "K-pop bias ranking game for tripleS members. Find your ultimate tripleS bias ranking using interactive comparison system between all 24 members.",
+        "applicationCategory": "Entertainment",
+        "operatingSystem": "Web Browser",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        },
+        "creator": {
+          "@type": "Person",
+          "name": "@celdaris",
+          "url": "https://x.com/celdaris"
+        },
+        "about": {
+          "@type": "MusicGroup",
+          "name": "tripleS",
+          "@id": "https://musicbrainz.org/artist/tripleS",
+          "genre": "K-pop"
+        },
+        "keywords": "tripleS, K-pop, bias ranking, member ranking, bias quiz, Gravity",
+        "inLanguage": "en",
+        "isAccessibleForFree": true,
+        "browserRequirements": "Requires JavaScript"
+      }
+    </script>
+
     <script src="/assets/sorter.js"></script>
   </head>
 
@@ -49,7 +145,7 @@
     <main class="page-sorter" id="page-sorter">
       <div class="container">
         <h2 id="battleNumber" class="sorter-header">
-          <strong>Gravity #1</strong><br>♡♡♡♡♡ 0% sorted
+          <strong>Gravity #1</strong><br />♡♡♡♡♡ 0% sorted
         </h2>
 
         <div class="sorter-game">
@@ -113,8 +209,11 @@
       <a href="https://x.com/celdaris" class="footer-sticker author-link">
         made with ♡ by @celdaris
       </a>
-      <a href="https://github.com/idaluisonyeo/bias-sorter" class="footer-sticker github-link">
-        fork of loonaverse.com/<br>bias-sorter
+      <a
+        href="https://github.com/idaluisonyeo/bias-sorter"
+        class="footer-sticker github-link"
+      >
+        fork of loonaverse.com/<br />bias-sorter
       </a>
     </footer>
 
