july pic update

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <h1>tripleS bias sorter</h1>
       <div>
         <p>
-          Choose your favOriTe member in each battle to get an accurate tripleS
+          Choose your favorite member in each battle to get an accurate tripleS
           ranking.
           <br />
           <span id="member-emojis" />
