init loading state

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <script type="module" src="/assets/sorter.js"></script>
   </head>
 
-  <body class="song-sorter">
+  <body class="song-sorter page-loading">
     <div class="theme-toggle">
       <span class="theme-toggle-text">#DarkMode</span>
       <div class="theme-toggle-icon">
