adjust footer, fix after click glow

--- a/index.html
+++ b/index.html
@@ -203,15 +203,10 @@
     </section>
 
     <footer class="page-footer">
-      <a href="https://x.com/celdaris" class="footer-sticker author-link">
-        made with ♡ by @celdaris
+      <a href="https://x.com/celdaris" class="footer-link author-link">
+        made with ♡ by <span class="accent-text">@celdaris</span>
       </a>
-      <a
-        href="https://github.com/idaluisonyeo/bias-sorter"
-        class="footer-sticker github-link"
-      >
-        fork of loonaverse.com/<br />bias-sorter
-      </a>
+      
     </footer>
 
     
