--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <script type="module" src="/assets/sorter.js"></script>
   </head>
 
-  <body class="song-sorter page-loading">
+  <body class="song-sorter">
     <div class="theme-toggle">
       <span class="theme-toggle-text">#DarkMode</span>
       <div class="theme-toggle-icon">
@@ -138,7 +138,7 @@
           Choose your favorite member in each battle to get an accurate tripleS
           ranking.
           <br />
-          <span id="member-emojis" />
+          <span id="member-emojis">🐶🐱🐻🦌🐰🐿️🐈🐯🍁🍒🦭🦆<br/>🐑🐺🦊🐇🦈🐣🐹🍞🎀⛄️☀️🦢</span>
         </p>
       </div>
     </header>
@@ -153,15 +153,29 @@
             <div
               id="optionA"
               class="sorter-option"
+              style="--member-color: #21AEFE;"
             >
-              x
+              <div class='photocard-image-container'>
+                <img src='https://imagedelivery.net/qQuMkbHJ-0s6rwu8vup_5w/6eea2e99-b104-480b-ce0b-07f27d816400/2x' alt='SeoYeon' class='photocard-image is-loading' width="517" height="800"/>
+                <div class='member-badge'>S1</div>
+              </div>
+              <div class='photocard-info'>
+                <div class='member-name' style='color: #21AEFE;'>SeoYeon 🐶</div>
+              </div>
             </div>
             <div class="versus"><span>vs</span></div>
             <div
               id="optionB"
               class="sorter-option"
+              style="--member-color: #FFAB64;"
             >
-              y
+              <div class='photocard-image-container'>
+                <img src='https://imagedelivery.net/qQuMkbHJ-0s6rwu8vup_5w/44741967-55fa-464f-8f0e-b47b9beab900/2x' alt='JiYeon' class='photocard-image is-loading' width="517" height="800"/>
+                <div class='member-badge'>S24</div>
+              </div>
+              <div class='photocard-info'>
+                <div class='member-name' style='color: #FFAB64;'>JiYeon 🦢</div>
+              </div>
             </div>
           </div>
           <!-- <div -->
