--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
           Choose your favorite member in each battle to get an accurate tripleS
           ranking.
           <br />
-          <span id="member-emojis">🐶🐱🐻🦌🐰🐿️🐈🐯🍁🍒🦭🦆<br/>🐑🐺🦊🐇🦈🐣🐹🍞🎀⛄️☀️🦢</span>
+          <span id="member-emojis"
+            >🐶🐱🐻🦌🐰🐿️🐈🐯🍁🍒🦭🦆<br />🐑🐺🦊🐇🦈🐣🐹🍞🎀⛄️☀️🦢</span
+          >
         </p>
       </div>
     </header>
@@ -153,28 +155,40 @@
             <div
               id="optionA"
               class="sorter-option"
-              style="--member-color: #21AEFE;"
+              style="--member-color: #21aefe"
             >
-              <div class='photocard-image-container'>
-                <img src='https://imagedelivery.net/qQuMkbHJ-0s6rwu8vup_5w/6eea2e99-b104-480b-ce0b-07f27d816400/2x' alt='SeoYeon' class='photocard-image is-loading' width="517" height="800"/>
-                <div class='member-badge'>S1</div>
+              <div class="photocard-image-container">
+                <img
+                  src="https://imagedelivery.net/qQuMkbHJ-0s6rwu8vup_5w/6eea2e99-b104-480b-ce0b-07f27d816400/2x"
+                  alt="SeoYeon"
+                  class="photocard-image is-loading"
+                  width="582"
+                  height="900"
+                />
+                <div class="member-badge">S1</div>
               </div>
-              <div class='photocard-info'>
-                <div class='member-name' style='color: #21AEFE;'>SeoYeon 🐶</div>
+              <div class="photocard-info">
+                <div class="member-name" style="color: #21aefe">SeoYeon 🐶</div>
               </div>
             </div>
             <div class="versus"><span>vs</span></div>
             <div
               id="optionB"
               class="sorter-option"
-              style="--member-color: #FFAB64;"
+              style="--member-color: #ffab64"
             >
-              <div class='photocard-image-container'>
-                <img src='https://imagedelivery.net/qQuMkbHJ-0s6rwu8vup_5w/44741967-55fa-464f-8f0e-b47b9beab900/2x' alt='JiYeon' class='photocard-image is-loading' width="517" height="800"/>
-                <div class='member-badge'>S24</div>
+              <div class="photocard-image-container">
+                <img
+                  src="https://imagedelivery.net/qQuMkbHJ-0s6rwu8vup_5w/44741967-55fa-464f-8f0e-b47b9beab900/2x"
+                  alt="JiYeon"
+                  class="photocard-image is-loading"
+                  width="582"
+                  height="900"
+                />
+                <div class="member-badge">S24</div>
               </div>
-              <div class='photocard-info'>
-                <div class='member-name' style='color: #FFAB64;'>JiYeon 🦢</div>
+              <div class="photocard-info">
+                <div class="member-name" style="color: #ffab64">JiYeon 🦢</div>
               </div>
             </div>
           </div>
@@ -191,11 +205,7 @@
     <section class="page-result">
       <div class="container">
         <div id="battleResult"></div>
-        <a
-          id="showMore"
-          style="display: none; cursor: pointer"
-          >Show More</a
-        >
+        <a id="showMore" style="display: none; cursor: pointer">Show More</a>
         <br />
         <a
           id="tweet-button"
@@ -220,9 +230,6 @@
       <a href="https://x.com/celdaris" class="footer-link author-link">
         made with ♡ by <span class="accent-text">@celdaris</span>
       </a>
-      
     </footer>
-
-    
   </body>
 </html>
