streamline font usage

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     </footer>
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&family=Quicksand:wght@400;600&family=Inter:wght@400;500&family=Poppins:wght@500;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;800&family=Quicksand:wght@400;600&display=swap"
       rel="preload"
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
